¿fix z-index problems

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -164,7 +164,7 @@
 
     .container.portfolio-page, .container.about-page, .container.contact-page, .container.certificates-page {
         .text-zone {
-            top: 30rem;
+            top: 35rem;
             left: 7%;
             width: 90%;
 
